--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
     <h2><span style="color: rgb(68, 68, 68);">Política Privacidade</span></h2>
-    <p><span style="color: rgb(68, 68, 68);">A sua privacidade é importante para nós. É política do 2048 Simples
+    <p><span style="color: rgb(68, 68, 68);">A sua privacidade é importante para nós. É política da VJM
             respeitar a sua privacidade em relação a qualquer informação sua que possamos coletar no site <a
-                href="https:// github/developer">2048 Simples</a>, e outros sites que possuímos e operamos.</span></p>
+                href="https:// github/developer">VJM</a>, e outros sites que possuímos e operamos.</span></p>
     <p><span style="color: rgb(68, 68, 68);">Solicitamos informações pessoais apenas quando realmente precisamos delas
             para lhe fornecer um serviço. Fazemo-lo por meios justos e legais, com o seu conhecimento e consentimento.
             Também informamos por que estamos coletando e como será usado.</span></p>
@@ -53,7 +53,7 @@
         </span></p>
     <h3><span style="color: rgb(68, 68, 68);">Compromisso do Usuário</span></h3>
     <p><span style="color: rgb(68, 68, 68);">O usuário se compromete a fazer uso adequado dos conteúdos e da informação
-            que o 2048 Simples oferece no site e com caráter enunciativo, mas não limitativo:</span></p>
+            que a VJM oferece no site e com caráter enunciativo, mas não limitativo:</span></p>
     <ul>
         <li><span style="color: rgb(68, 68, 68);">A) Não se envolver em atividades que sejam ilegais ou contrárias à boa
                 fé a à ordem pública;</span></li>
@@ -61,7 +61,7 @@
                 xenofóbica, jogos de sorte ou azar, qualquer tipo de pornografia ilegal, de apologia ao terrorismo ou
                 contra os direitos humanos;</span></li>
         <li><span style="color: rgb(68, 68, 68);">C) Não causar danos aos sistemas físicos (hardwares) e lógicos
-                (softwares) do 2048 Simples, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus
+                (softwares) da VJM, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus
                 informáticos ou quaisquer outros sistemas de hardware ou software que sejam capazes de causar danos
                 anteriormente mencionados.</span></li>
     </ul>
